# TRex

./: .gitignore  CMakeLists.txt  README.md
src/: gameState.c  gameState.h  livesState.c  livesState.h  main.c  main.h
